<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_list_books" android:icon="@android:drawable/ic_menu_slideshow"
            android:title="@string/books" />
        <item android:id="@+id/nav_scan" android:icon="@android:drawable/ic_menu_camera"
            android:title="@string/scan" />
        <item android:id="@+id/nav_scan_bar" android:visible="false" />
        <item android:id="@+id/nav_detail" android:visible="false" />
    </group>

    <item android:title="@string/info">
        <menu >
            <item android:id="@+id/nav_about" android:icon="@android:drawable/ic_menu_info_details"
                android:title="@string/about" android:checkable="true"/>
        </menu>
    </item>

</menu>