<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_margin"
    android:layout_gravity="center_horizontal"
    tools:context="it.jaschke.alexandria.AddBook">

   <include
       layout="@layout/layout_edittext_scan" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/bookTitle"
        android:textSize="@dimen/head_line"
        android:textIsSelectable="true"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/activity_margin" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bookSubTitle"
        android:layout_marginTop="@dimen/small_margin"
        android:maxLines="3"
        android:ellipsize="end" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_margin">
        <ImageView
            android:id="@+id/bookCover"
            android:layout_width="@dimen/book_cover_width"
            android:layout_height="@dimen/book_cover_height"
            android:scaleType="fitXY"
            android:layout_marginLeft="@dimen/activity_margin"
            android:layout_marginRight="@dimen/activity_margin"
            android:contentDescription="@string/book_cover"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/authors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/bookCover"
            android:layout_toEndOf="@id/bookCover"
            android:textStyle="italic"
            android:textAppearance="?android:textAppearanceMedium" />

        <TextView
            android:id="@+id/categories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:textAppearanceMedium"
            android:layout_below="@+id/authors"
            android:layout_toRightOf="@id/bookCover"
            android:layout_toEndOf="@id/bookCover"
            android:layout_marginTop="@dimen/activity_margin"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/activity_margin"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/cancel_button"
            android:layout_weight="1"
            android:id="@+id/delete_button"
            android:drawableLeft="@drawable/ic_action_discard"
            android:drawableStart="@drawable/ic_action_discard"
            android:visibility="invisible" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/ok_button"
            android:visibility="invisible"
            android:layout_weight="1"
            android:id="@+id/save_button"
            android:drawableLeft="@drawable/ic_action_accept"
            android:drawableStart="@drawable/ic_action_accept"
            android:layout_gravity="bottom" />

    </LinearLayout>

</LinearLayout>
